# deepin-calculator

./: *shell*  .clog.toml  .gitignore  .packit.yaml  .project.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.zh_CN.md  algorithm.h  calculator.pro  calculator.qrc  com.deepin.Calculator.service  com.deepin.calculator.xml  deepin-calculator.desktop  deepin-calculator.pro  deepin-calculator.qrc  deploy_dep  displayarea.cpp  displayarea.h  dsettings.cpp  dsettings.h  install_dep  linglong.yaml  listitem.cpp  listitem.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  textbutton.cpp  textbutton.h  titlebar.cpp  titlebar.h  translate_generation.sh  translations.pri  (+2 more)
.reuse/: dep5
.tx/: config  transifex.yaml  ts2desktop
abacus/: ErrorManager.h  Express.cpp  Express.h  ExpressPart.cpp  ExpressPart.h  Expression.cpp  Expression.h  IService.h  Logger.cpp  Logger.h  MathEx.cpp  MathEx.h  OperatorFunction.cpp  OperatorFunction.h  Session.cpp  Session.h  Singleton.h  UserFunctor.cpp  UserFunctor.h  includes.h  metacharacter.h  parser.cpp  parser.h  shell.h
arm64/: linglong.yaml
core/: book.cpp  book.h  constants.cpp  coresettings.cpp  coresettings.h  errors.h  evaluator.cpp  evaluator.h  functions.cpp  numberformatter.cpp  opcode.h  pageserver.cpp  pageserver.h  session.cpp  session.h  sessionhistory.cpp  sessionhistory.h  settings.cpp  settings.h  token.cpp  token.h  tokens.h  tokenstack.cpp  tokenstack.h  userfunction.cpp  variable.cpp
debian/: changelog  control  copyright  deepin-calculator.1  manpages  rules
loong64/: linglong.yaml
math/: cmath.cpp  cmath.h  cnumberparser.cpp  floatcommon.c  floaterf.c  floatgamma.c  floatincgamma.c  floatnum.c  hmath.cpp  hmath.h  number.h  quantity.cpp  quantity.h  rational.cpp  units.cpp
mips64/: linglong.yaml
modules/: basicmodule.cpp  basicmodule.h  expressionbar.cpp  expressionbar.h  memoryitemdelegate.h  memoryitemwidget.cpp  memoryitemwidget.h  memorylistwidget.cpp  memorylistwidget.h  memorywidget.cpp  memorywidget.h  scientificmodule.cpp  scientificmodule.h  sciexpressionbar.cpp  sciexpressionbar.h  scihistorywidget.cpp  scihistorywidget.h  simplelistdelegate.cpp  simplelistdelegate.h  simplelistmodel.cpp  simplelistmodel.h  simplelistview.cpp  simplelistview.h  simplemodule.cpp  simplemodule.h
qss/: dark.qss  light.qss  style.qss
rpm/: deepin-calculator.spec
shortcut/: deepin-calculator-shortcut.desktop
src/: CMakeLists.txt  algorithm.cpp  algorithm.h  backbutton.cpp  backbutton.h  calculatorInterface.cpp  calculatorInterface.h  deepin-calculator.qrc  displayarea.cpp  displayarea.h  dsettings.cpp  dsettings.h  expressionlist.cpp  expressionlist.h  globaldefine.h  inputedit.cpp  inputedit.h  listitem.cpp  listitem.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  memorypublic.cpp  memorypublic.h  performancemonitor.cpp  performancemonitor.h  separator.cpp  separator.h  settings.cpp  settings.h  textbutton.cpp  textbutton.h  titlebar.cpp  titlebar.h  utils.cpp  utils.h
src/core/: book.h  (+20 more)
sw64/: linglong.yaml
test/: CMakeLists.txt  cmake-lcov-test.sh
tests/: CMakeLists.txt  cmake-lcov-test.sh  main.cpp  test-prj-running.sh
tests/src/: main.cpp  stub.h  ut_dsetting.cpp  ut_dsetting.h  ut_mainwindow.cpp  ut_mainwindow.h  ut_memorypublic.cpp  ut_memorypublic.h  ut_qtest.cpp  ut_qtest.h  ut_utils.cpp  ut_utils.h
tests/src/control/: ut_basickeypad.cpp  ut_basickeypad.h  ut_bitbutton.cpp  ut_bitbutton.h  ut_equalbutton.cpp  ut_equalbutton.h  ut_iconbutton.cpp  ut_iconbutton.h  ut_memhiskeypad.cpp  ut_memhiskeypad.h  ut_memorybutton.cpp  ut_memorybutton.h  ut_memorykeypad.cpp  ut_memorykeypad.h  ut_procheckbtnkeypad.cpp  ut_procheckbtnkeypad.h  ut_programmerkeypad.cpp  ut_programmerkeypad.h  ut_prosystemkeypad.cpp  ut_prosystemkeypad.h  ut_scientifickeypad.cpp  ut_scientifickeypad.h  ut_textbutton.cpp  ut_textbutton.h
tests/src/modules/: ut_basicmodul.cpp  ut_basicmodul.h  ut_expressionbar.cpp  ut_expressionbar.h  ut_memoryitemdelegate.cpp  ut_memoryitemwidget.cpp  ut_memoryitemwidget.h  ut_memorypublic.h  ut_memorywidget.cpp  ut_memorywidget.h  ut_scientificmodule.cpp  ut_sciexpressionbar.h  ut_scihistorywidget.cpp  ut_simplelistdelegate.cpp  ut_simplelistmodel.h
tests/src/moduls/: ut_expressionbar.cpp  ut_expressionbar.h  ut_memorylistwidget.cpp  ut_memorypublic.cpp  ut_scientificmodule.cpp  ut_sciexpressionbar.cpp  ut_sciexpressionbar.h  ut_scihistorywidget.cpp  ut_scihistorywidget.h  ut_simplelistdelegate.h  ut_simplelistmodel.cpp  ut_simplelistview.cpp  ut_simplelistview.h
tests/src/views/: ut_memoryitemdelegate.cpp  ut_memoryitemdelegate.h  ut_memoryitemwidget.cpp  ut_memoryitemwidget.h  ut_memorylistwidget.cpp  ut_memorylistwidget.h  ut_memorywidget.cpp  ut_memorywidget.h  ut_programmerarrowdelegate.cpp  ut_programmerarrowdelegate.h  ut_programmeritemwidget.cpp  ut_programmeritemwidget.h  ut_prolistdelegate.cpp  ut_prolistdelegate.h  ut_prolistmodel.cpp  ut_prolistmodel.h  ut_prolistview.cpp  ut_prolistview.h  ut_simplelistdelegate.cpp  ut_simplelistdelegate.h  ut_simplelistmodel.cpp  ut_simplelistmodel.h  ut_simplelistview.cpp  ut_simplelistview.h
tests/src/widgets/: ut_arrowrectangle.cpp  ut_arrowrectangle.h  ut_basickeypad.cpp  ut_basickeypad.h  ut_basicmodul.cpp  ut_basicmodul.h  ut_expressionbar.cpp  ut_expressionbar.h  ut_inputedit.cpp  ut_inputedit.h  ut_memhiswidget.cpp  ut_memhiswidget.h  ut_probitwidget.cpp  ut_probitwidget.h  ut_proexpressionbar.cpp  ut_proexpressionbar.h  ut_programmodule.cpp  ut_programmodule.h  ut_scientificmodule.cpp  ut_scientificmodule.h  ut_sciexpressionbar.cpp  ut_sciexpressionbar.h  ut_scihistorywidget.cpp
translations/: deepin-calculator.ts  deepin-calculator_ady.ts  deepin-calculator_af.ts  deepin-calculator_am_ET.ts  deepin-calculator_ar.ts  deepin-calculator_ast.ts  deepin-calculator_az.ts  deepin-calculator_bg.ts  deepin-calculator_bn.ts  deepin-calculator_bo.ts  deepin-calculator_bqi.ts  deepin-calculator_br.ts  deepin-calculator_ca.ts  deepin-calculator_cs.ts  deepin-calculator_da.ts  (+68 more)
(+367 files in other folders)
